--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Instant JSON Prettifier",
   "version": "0.0.1",
   "engines": {
-    "vscode": "^1.93.0"
+    "vscode": "^1.60.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/appler1009/vscode-json-prettify.git"
   },
   "categories": [
     "Other"
