--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "pretty-json",
   "displayName": "Pretty JSON",
-  "description": "Instant JSON Prettifier and Preview",
-  "version": "0.0.8",
+  "description": "Instant JSON Prettifier and Previewer",
+  "version": "0.0.9",
   "engines": {
     "vscode": "^1.60.0"
   },
