--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "Pretty JSON Preview",
   "description": "Instant JSON Prettifier and Previewer",
   "version": "0.0.14",
+  "publisher": "Appler",
   "engines": {
     "vscode": "^1.60.0"
   },
