--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,10 @@ jobs:
       id: get_version
       run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
 
+    - name: Get Package Name
+      id: package-name
+      run: echo "name=$(node -p "require('./package.json').name")" >> $GITHUB_OUTPUT
+
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
@@ -49,6 +53,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./${{ github.event.repository.name }}-${{ steps.get_version.outputs.VERSION }}.vsix
-        asset_name: ${{ github.event.repository.name }}-${{ steps.get_version.outputs.VERSION }}.vsix
+        asset_path: ./*.vsix
+        # asset_name: ${{ github.event.repository.name }}-${{ steps.get_version.outputs.VERSION }}.vsix
+        asset_name: ${{ steps.package-name.outputs.name }}-${{ steps.get_version.outputs.VERSION }}.vsix
         asset_content_type: application/octet-stream
