--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Get Version
       id: get_version
-      run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
+      run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
 
     - name: Get Package Name
       id: package-name
@@ -47,12 +47,16 @@ jobs:
         draft: false
         prerelease: false
 
+    - name: Find VSIX file
+      id: find-vsix
+      run: echo "file=$(find ${{ github.workspace }} -name '*.vsix' -type f)" >> $GITHUB_OUTPUT
+
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: $PWD/*.vsix
+        asset_path: ${{ steps.find-vsix.outputs.file }}
         asset_name: ${{ steps.package-name.outputs.name }}-${{ steps.get_version.outputs.VERSION }}.vsix
         asset_content_type: application/octet-stream
