--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "type": "git",
     "url": "https://github.com/appler1009/vscode-json-prettify.git"
   },
-  "categories": [
-    "Other"
-  ],
+  "categories": [ "Formatters" ],
   "activationEvents": [],
   "main": "./extension.js",
   "contributes": {
