--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Instant JSON Prettifier and Previewer",
   "version": "0.0.33",
   "publisher": "Appler",
+  "keywords": ["json", "format", "pretty", "preview", "highlight"],
   "icon": "resources/icon.png",
   "engines": {
     "vscode": "^1.60.0"
