--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "pretty-json-preview",
   "displayName": "Pretty JSON Preview",
   "description": "Instant JSON Prettifier and Previewer",
-  "version": "0.0.33",
+  "version": "0.0.34",
   "publisher": "Appler",
-  "keywords": ["json", "format", "pretty", "preview", "highlight"],
+  "keywords": [
+    "json",
+    "format",
+    "pretty",
+    "preview",
+    "highlight"
+  ],
   "icon": "resources/icon.png",
   "engines": {
     "vscode": "^1.60.0"
