adding jsonl and line to the tags for visibility

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "format",
     "pretty",
     "preview",
-    "highlight"
+    "highlight",
+    "jsonl",
+    "line"
   ],
   "icon": "resources/icon.png",
   "engines": {
